[gd_scene load_steps=6 format=2]

[ext_resource path="res://ControlPoint.gd" type="Script" id=1]
[ext_resource path="res://AlternateMaterialColours.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/sfx/172206__fins__teleport.wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]

[node name="ControlPoint" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14536, 0 )
shape = SubResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="."]
height = 0.306089
sides = 16
material = SubResource( 2 )

[node name="AlternateMaterialColours" parent="CSGCylinder" instance=ExtResource( 2 )]

[node name="AudioStreamPlayer_Landed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_ControlPoint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ControlPoint_body_exited"]
